add validation and fix swagger comments
