# controllers/contacts.js
@@ -2,9 +2,10 @@ const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAll = async (req, res, next) => {
-  // #swagger.summary = 'Get list of all contacts'
-  // #swagger.description = 'This will list all of the contacts in the database'
-  // #swagger.parameters[]
+  // #swagger.tags = ['Contacts']
+  // #swagger.summary = 'Get all Contacts'
+  // #swagger.description = 'Get a list of all contacts in the data collection'
+  // #swagger.operationId = 'getAll'
   const result = await mongodb.getDb().db().collection('contacts').find();
   result.toArray().then((lists) => {
     res.setHeader('Content-Type', 'application/json');
@@ -13,8 +14,10 @@ const getAll = async (req, res, next) => {
 };
 
 const getSingle = async (req, res, next) => {
-  // #swagger.summary = 'Get a single contact by ID'
-  // #swagger.description = 'To get a single contact enter a user ID'
+  // #swagger.tags = ['Contacts']
+  // #swagger.summary = 'Get one Contact'
+  // #swagger.description = 'Get the contact information of one contact by contact ID'
+  // #swagger.operationId = 'getSingle'
   const userId = new ObjectId(req.params.id);
   const result = await mongodb.getDb().db().collection('contacts').find({ _id: userId });
   result.toArray().then((lists) => {
@@ -25,6 +28,30 @@ const getSingle = async (req, res, next) => {
 
 // create a contact
 const postContact = async (req, res, next) => {
+  // #swagger.tags = ['Contacts']
+  // #swagger.summary = 'Create a new Contact'
+  // #swagger.description = 'Create a new contact by providing all required information'
+  // #swagger.operationId = 'postContact'
+  // #swagger.responses[201] = { description: 'Contact created successfully.' }
+  // #swagger.responses[500] = { description: 'An error occured in the create contact request.' }
+  /*
+  #swagger.requestBody = {
+    required: true,
+    content: {
+      "application/json": {
+        schema: { $ref: "#/components/schemas/Contacts" },
+        example: {
+            firstName: 'John',
+            lastName: 'Doe',
+            email: 'Johndoe@gmail.com',
+            favoriteColor: 'Blue',
+            birthday: '04/22/1999'
+          }
+        }
+      }
+    }
+  } 
+  */
   const contact = {
     firstName: req.body.firstName,
     lastName: req.body.lastName,
@@ -42,8 +69,10 @@ const postContact = async (req, res, next) => {
 
 // update one contact email address
 const putEmail = async (req, res) => {
-  // #swagger.summary = 'Update a contacts email address by ID'
-  // #swagger.description = 'To change a contacts email address, enter the user Id and new email address'
+  // #swagger.tags = ['Contacts']
+  // #swagger.summary = 'Update Contact Email'
+  // #swagger.description = 'Update the Email address of one contact by contact ID'
+  // #swagger.operationId = 'putEmail'
   const userId = new ObjectId(req.params.id);
   const contactEmail = {
     email: req.body.email
@@ -55,16 +84,40 @@ const putEmail = async (req, res) => {
     .updateOne({ _id: userId }, { $set: contactEmail }, { upsert: false });
   console.log(response);
   if (response.modifiedCount > 0) {
+    // #swagger.responses[204] = { description: 'Email address updated successfully.' }
     res.status(204).send();
   } else {
+    // #swagger.responses[500] = { description: 'An error occured in the update email request.' }
     res.status(500).json(response.error || 'An error occured in the update email request.');
   }
 };
 
 // update one contact using replace contact
 const putContact = async (req, res) => {
-  // #swagger.summary = 'Update all contact information by ID'
-  // #swagger.description = 'To change a contacts information enter the ID and all required information.'
+  // #swagger.tags = ['Contacts']
+  // #swagger.summary = 'Update Contact Information'
+  // #swagger.description = 'Update the contact information of one contact by contact ID'
+  // #swagger.operationId = 'putContact'
+  // #swagger.responses[204] = { description: 'Contact updated successfully.' }
+  // #swagger.responses[500] = { description: 'An error occured in the update contact information request.' }
+  /*
+  #swagger.requestBody = {
+    required: true,
+    content: {
+      "application/json": {
+        schema: { $ref: "#/components/schemas/Contacts" },
+        example: {
+            firstName: 'John',
+            lastName: 'Doe',
+            email: 'Johndoe@gmail.com',
+            favoriteColor: 'Blue',
+            birthday: '04/22/1999'
+          }
+        }
+      }
+    }
+  } 
+  */
   const userId = new ObjectId(req.params.id);
   const contact = {
     firstName: req.body.firstName,
@@ -90,14 +143,18 @@ const putContact = async (req, res) => {
 
 // Delete a Contact
 const deleteContact = async (req, res) => {
-  // #swagger.summary = 'Delete a contact by ID'
-  // #swagger.description = 'To delete a contact enter the ID'
+  // #swagger.tags = ['Contacts']
+  // #swagger.summary = 'Delete a Contact'
+  // #swagger.description = 'Delete one contact from the data collection by Contact ID.'
+  // #swagger.operationId = 'deleteContact'
   const userId = new ObjectId(req.params.id);
   const response = await mongodb.getDb().db().collection('contacts').deleteOne({ _id: userId });
   console.log(response);
   if (response.deletedCount > 0) {
+    // #swagger.responses[200] = { description: 'Contact deleted successfully.' }
     res.status(200).send();
   } else {
+    // #swagger.responses[500] = { description: 'An error occured in the delete request.' }
     res.status(500).json(response.error || 'An error occured with the delete request.');
   }
 };
